# atom_ws

./: .gitignore  run.sh  setup.txt
install/: local_setup.sh  setup.sh
install/atom_communication/lib/atom_communication/: serial_node  tcp_servernode
install/atom_communication/share/atom_communication/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/atom_inference/lib/atom_inference/: inference_node
install/atom_inference/share/atom_inference/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/atom_logic/lib/atom_logic/: atom_core_logic_node  minimal_param_node
install/atom_logic/share/ament_index/resource_index/package_run_dependencies/: atom_logic
install/atom_logic/share/atom_logic/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atom_logic/share/atom_logic/launch/: atom_core_logic.launch.py  my_launch_file.launch.py
install/atom_test/lib/atom_test/: atom_test
install/atom_test/share/atom_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: my_launch_file.launch.py
log/: latest_build
src/atom_communication/: package.xml  setup.cfg  setup.py
src/atom_communication/atom_communication/: serial_node.py  tcp_servernode.py
src/atom_communication/launch/: communication.launch.py
src/atom_inference/: package.xml  setup.cfg  setup.py
src/atom_inference/atom_inference/: __init__.py  app.py  gstreamer.py  inference.py  yoloDet.py
src/atom_inference/launch/: inference.launch.py
src/atom_logic/: CMakeLists.txt  package.xml
src/atom_logic/include/atom_logic/: FindLines.h  WebCamStream.h
src/atom_logic/launch/: atom_core_logic.launch.py  logic.launch.py
src/atom_logic/src/: FindLines.cpp  PID.cpp  WebCamStream.cpp  main.cpp
src/atom_test/: setup.cfg  setup.py
