<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atom_logic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rusu.alexei.2002@gmail.com">toor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>s
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
